# dockerApi

./: README.md  pyproject.toml  requirements.txt
BlogAPI/: settings.py  urls.py
api_app/: models.py  serializers.py  urls.py  views.py
api_app/migrations/: 0001_initial.py
